--- a/44643Sec03Team02Spring2024FinalProject/RealVision/RealVision/Base.lproj/Main.storyboard
+++ b/44643Sec03Team02Spring2024FinalProject/RealVision/RealVision/Base.lproj/Main.storyboard
@@ -151,26 +151,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" alignment="center" spacing="66" translatesAutoresizingMaskIntoConstraints="NO" id="Re9-Ua-J8K" userLabel="BigContainerSV">
-                                <rect key="frame" x="60" y="135.00000000000011" width="231.33333333333337" height="370.66666666666663"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="66" translatesAutoresizingMaskIntoConstraints="NO" id="Re9-Ua-J8K" userLabel="BigContainerSV">
+                                <rect key="frame" x="20" y="40" width="353" height="570"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reset Password" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KGV-Yi-MbA">
-                                        <rect key="frame" x="0.0" y="0.0" width="231.33333333333334" height="55.666666666666664"/>
+                                        <rect key="frame" x="61.000000000000014" y="0.0" width="231.33333333333337" height="267"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="bd3-xJ-m8v" userLabel="emailSV">
-                                        <rect key="frame" x="51" y="121.66666666666669" width="129" height="74"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="bd3-xJ-m8v" userLabel="emailSV">
+                                        <rect key="frame" x="0.0" y="333" width="353" height="57"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RSL-49-d6Z">
-                                                <rect key="frame" x="0.0" y="0.0" width="129" height="33"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your Email" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RSL-49-d6Z">
+                                                <rect key="frame" x="0.0" y="0.0" width="353" height="20.333333333333332"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="your email id" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pNC-08-uLm">
-                                                <rect key="frame" x="0.0" y="41" width="129" height="33"/>
+                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="your email id" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pNC-08-uLm">
+                                                <rect key="frame" x="0.0" y="28.333333333333314" width="353" height="28.666666666666671"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                                 <connections>
@@ -179,25 +179,19 @@
                                             </textField>
                                         </subviews>
                                     </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="dgT-is-c1p" userLabel="ButtonsSV">
-                                        <rect key="frame" x="77.333333333333343" y="261.66666666666669" width="76.666666666666657" height="109"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="dgT-is-c1p" userLabel="ButtonsSV">
+                                        <rect key="frame" x="138.33333333333334" y="456" width="76.666666666666657" height="114"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qrc-ka-Ppq">
-                                                <rect key="frame" x="4.6666666666666572" y="0.0" width="67.333333333333329" height="34.666666666666664"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="76.666666666666671" height="71.666666666666671"/>
                                                 <state key="normal" title="Button"/>
-                                                <buttonConfiguration key="configuration" style="filled" title="Reset"/>
+                                                <buttonConfiguration key="configuration" style="plain" title="Reset"/>
                                                 <connections>
                                                     <action selector="reset:" destination="0ao-C1-FPz" eventType="touchUpInside" id="Sb4-yU-m79"/>
                                                 </connections>
                                             </button>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="or" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="285-dY-uH5">
-                                                <rect key="frame" x="29.333333333333314" y="42.666666666666686" width="18" height="24"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
                                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qd8-Hd-djy">
-                                                <rect key="frame" x="0.0" y="74.666666666666686" width="76.666666666666671" height="34.333333333333343"/>
+                                                <rect key="frame" x="0.0" y="79.666666666666629" width="76.666666666666671" height="34.333333333333343"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Cancel"/>
                                                 <connections>
@@ -205,20 +199,28 @@
                                                 </connections>
                                             </button>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstItem="Qd8-Hd-djy" firstAttribute="width" secondItem="qrc-ka-Ppq" secondAttribute="width" id="PtT-ks-7A3"/>
+                                        </constraints>
                                     </stackView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="dgT-is-c1p" firstAttribute="height" secondItem="Re9-Ua-J8K" secondAttribute="height" multiplier="0.293694" id="Hbn-ro-7Si"/>
-                                    <constraint firstItem="bd3-xJ-m8v" firstAttribute="height" secondItem="Re9-Ua-J8K" secondAttribute="height" multiplier="0.2" id="mDi-4B-3D7"/>
-                                    <constraint firstItem="KGV-Yi-MbA" firstAttribute="height" secondItem="Re9-Ua-J8K" secondAttribute="height" multiplier="0.15" id="owM-Zv-wCF"/>
+                                    <constraint firstItem="dgT-is-c1p" firstAttribute="height" secondItem="Re9-Ua-J8K" secondAttribute="height" multiplier="0.3" id="0rP-wf-v5e"/>
+                                    <constraint firstItem="pNC-08-uLm" firstAttribute="width" secondItem="Re9-Ua-J8K" secondAttribute="width" id="BIz-dV-t4D"/>
+                                    <constraint firstItem="KGV-Yi-MbA" firstAttribute="height" secondItem="Re9-Ua-J8K" secondAttribute="height" multiplier="0.3" id="aah-K0-UQp"/>
+                                    <constraint firstItem="dgT-is-c1p" firstAttribute="height" secondItem="bd3-xJ-m8v" secondAttribute="height" multiplier="2" id="huf-o5-aUX"/>
+                                    <constraint firstItem="pNC-08-uLm" firstAttribute="height" secondItem="Re9-Ua-J8K" secondAttribute="height" multiplier="0.1" id="kVf-TS-jzg"/>
+                                    <constraint firstItem="bd3-xJ-m8v" firstAttribute="height" secondItem="Re9-Ua-J8K" secondAttribute="height" multiplier="0.1" id="x7Y-Pq-NI5"/>
                                 </constraints>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="PuV-kp-hF7"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Re9-Ua-J8K" firstAttribute="centerX" secondItem="PuV-kp-hF7" secondAttribute="centerX" id="Kp2-yR-2ve"/>
-                            <constraint firstItem="Re9-Ua-J8K" firstAttribute="centerY" secondItem="PuV-kp-hF7" secondAttribute="centerY" multiplier="0.65" id="pIK-4o-O5X"/>
+                            <constraint firstItem="PuV-kp-hF7" firstAttribute="bottom" secondItem="Re9-Ua-J8K" secondAttribute="bottom" constant="20" id="5aW-r7-xVe"/>
+                            <constraint firstItem="PuV-kp-hF7" firstAttribute="trailing" secondItem="Re9-Ua-J8K" secondAttribute="trailing" constant="20" id="FmJ-86-ET5"/>
+                            <constraint firstItem="Re9-Ua-J8K" firstAttribute="leading" secondItem="PuV-kp-hF7" secondAttribute="leading" constant="20" id="GDQ-EZ-G5D"/>
+                            <constraint firstItem="Re9-Ua-J8K" firstAttribute="top" secondItem="PuV-kp-hF7" secondAttribute="top" constant="40" id="KZa-SK-yGb"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="uow-RQ-T0J"/>
