--- a/44643Sec03Team02Spring2024FinalProject/RealVision/RealVision/Base.lproj/Main.storyboard
+++ b/44643Sec03Team02Spring2024FinalProject/RealVision/RealVision/Base.lproj/Main.storyboard
@@ -17,14 +17,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="6yq-4B-z0H" userLabel="BigcontainerSV">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="6yq-4B-z0H" userLabel="BigcontainerSV">
                                 <rect key="frame" x="10" y="69" width="373" height="773"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="D7FC3631-9D53-4C3F-9064-C4C1A115327C" translatesAutoresizingMaskIntoConstraints="NO" id="HFy-Dd-U0U" userLabel="RealVision">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RealVision" translatesAutoresizingMaskIntoConstraints="NO" id="HFy-Dd-U0U" userLabel="RealVision">
                                         <rect key="frame" x="0.0" y="0.0" width="373" height="232"/>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="87P-GA-Ep6" userLabel="userinfoSV">
-                                        <rect key="frame" x="0.0" y="238" width="373" height="154.66666666666663"/>
+                                        <rect key="frame" x="0.0" y="240" width="373" height="154.66666666666663"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MHP-Wd-Fe9" userLabel="UsernameLBL">
                                                 <rect key="frame" x="0.0" y="0.0" width="373" height="20.333333333333332"/>
@@ -60,7 +60,7 @@
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="KGX-UO-AEv" userLabel="ButtonSV">
-                                        <rect key="frame" x="0.0" y="398.66666666666669" width="373" height="77"/>
+                                        <rect key="frame" x="0.0" y="402.66666666666669" width="373" height="77"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="udM-Rw-T6N">
                                                 <rect key="frame" x="153.66666666666666" y="0.0" width="65.666666666666657" height="34.666666666666664"/>
@@ -71,7 +71,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sp0-fg-CDU">
-                                                <rect key="frame" x="104.33333333333333" y="42.666666666666629" width="164.33333333333337" height="34.333333333333343"/>
+                                                <rect key="frame" x="104.33333333333333" y="42.666666666666686" width="164.33333333333337" height="34.333333333333343"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Forgot password ?"/>
                                                 <connections>
@@ -82,16 +82,16 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="QfM-mk-F4X" userLabel="SignupSV">
-                                        <rect key="frame" x="0.0" y="481.66666666666663" width="373" height="291.33333333333337"/>
+                                        <rect key="frame" x="0.0" y="487.66666666666663" width="373" height="285.33333333333337"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Not a member ?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hrc-tz-2d1">
-                                                <rect key="frame" x="0.0" y="0.0" width="185.66666666666666" height="291.33333333333331"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="185.66666666666666" height="285.33333333333331"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ukc-AO-g7Z">
-                                                <rect key="frame" x="187.66666666666663" y="0.0" width="185.33333333333337" height="291.33333333333331"/>
+                                                <rect key="frame" x="187.66666666666663" y="0.0" width="185.33333333333337" height="285.33333333333331"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="signup"/>
                                                 <connections>
@@ -104,6 +104,7 @@
                                         </constraints>
                                     </stackView>
                                 </subviews>
+                                <color key="backgroundColor" red="0.90526587162467642" green="1" blue="0.67428029251205013" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstItem="87P-GA-Ep6" firstAttribute="width" secondItem="6yq-4B-z0H" secondAttribute="width" id="5mX-hC-Rez"/>
                                     <constraint firstItem="HFy-Dd-U0U" firstAttribute="height" secondItem="6yq-4B-z0H" secondAttribute="height" multiplier="0.3" id="LkW-sx-6QQ"/>
@@ -119,7 +120,7 @@
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.90526587160000005" green="1" blue="0.67428029249999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="6yq-4B-z0H" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="8ND-2M-gXg"/>
                             <constraint firstAttribute="bottom" secondItem="vef-k1-bw4" secondAttribute="bottom" id="MO7-hb-dl6"/>
@@ -152,25 +153,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="66" translatesAutoresizingMaskIntoConstraints="NO" id="Re9-Ua-J8K" userLabel="BigContainerSV">
-                                <rect key="frame" x="20" y="40" width="353" height="570"/>
+                                <rect key="frame" x="20" y="40" width="353" height="407.66666666666669"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reset Password" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KGV-Yi-MbA">
-                                        <rect key="frame" x="61.000000000000014" y="0.0" width="231.33333333333337" height="267"/>
+                                        <rect key="frame" x="61.000000000000014" y="0.0" width="231.33333333333337" height="122.33333333333333"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="bd3-xJ-m8v" userLabel="emailSV">
-                                        <rect key="frame" x="0.0" y="333" width="353" height="57"/>
+                                        <rect key="frame" x="0.0" y="188.33333333333334" width="353" height="76.666666666666657"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your Email" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RSL-49-d6Z">
-                                                <rect key="frame" x="0.0" y="0.0" width="353" height="20.333333333333332"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="353" height="28"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="your email id" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pNC-08-uLm">
-                                                <rect key="frame" x="0.0" y="28.333333333333314" width="353" height="28.666666666666671"/>
+                                                <rect key="frame" x="0.0" y="35.999999999999972" width="353" height="40.666666666666657"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                                 <connections>
@@ -180,18 +181,18 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="dgT-is-c1p" userLabel="ButtonsSV">
-                                        <rect key="frame" x="138.33333333333334" y="456" width="76.666666666666657" height="114"/>
+                                        <rect key="frame" x="138.33333333333334" y="331" width="76.666666666666657" height="76.666666666666686"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qrc-ka-Ppq">
-                                                <rect key="frame" x="0.0" y="0.0" width="76.666666666666671" height="71.666666666666671"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qrc-ka-Ppq">
+                                                <rect key="frame" x="0.0" y="0.0" width="76.666666666666671" height="34.333333333333336"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Reset"/>
                                                 <connections>
                                                     <action selector="reset:" destination="0ao-C1-FPz" eventType="touchUpInside" id="Sb4-yU-m79"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qd8-Hd-djy">
-                                                <rect key="frame" x="0.0" y="79.666666666666629" width="76.666666666666671" height="34.333333333333343"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qd8-Hd-djy">
+                                                <rect key="frame" x="0.0" y="42.333333333333314" width="76.666666666666671" height="34.333333333333343"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="plain" title="Cancel"/>
                                                 <connections>
@@ -208,14 +209,13 @@
                                     <constraint firstItem="dgT-is-c1p" firstAttribute="height" secondItem="Re9-Ua-J8K" secondAttribute="height" multiplier="0.3" id="0rP-wf-v5e"/>
                                     <constraint firstItem="pNC-08-uLm" firstAttribute="width" secondItem="Re9-Ua-J8K" secondAttribute="width" id="BIz-dV-t4D"/>
                                     <constraint firstItem="KGV-Yi-MbA" firstAttribute="height" secondItem="Re9-Ua-J8K" secondAttribute="height" multiplier="0.3" id="aah-K0-UQp"/>
-                                    <constraint firstItem="dgT-is-c1p" firstAttribute="height" secondItem="bd3-xJ-m8v" secondAttribute="height" multiplier="2" id="huf-o5-aUX"/>
+                                    <constraint firstItem="dgT-is-c1p" firstAttribute="height" secondItem="bd3-xJ-m8v" secondAttribute="height" id="huf-o5-aUX"/>
                                     <constraint firstItem="pNC-08-uLm" firstAttribute="height" secondItem="Re9-Ua-J8K" secondAttribute="height" multiplier="0.1" id="kVf-TS-jzg"/>
-                                    <constraint firstItem="bd3-xJ-m8v" firstAttribute="height" secondItem="Re9-Ua-J8K" secondAttribute="height" multiplier="0.1" id="x7Y-Pq-NI5"/>
                                 </constraints>
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="PuV-kp-hF7"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.90526587160000005" green="1" blue="0.67428029249999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="PuV-kp-hF7" firstAttribute="bottom" secondItem="Re9-Ua-J8K" secondAttribute="bottom" constant="20" id="5aW-r7-xVe"/>
                             <constraint firstItem="PuV-kp-hF7" firstAttribute="trailing" secondItem="Re9-Ua-J8K" secondAttribute="trailing" constant="20" id="FmJ-86-ET5"/>
@@ -238,7 +238,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="D7FC3631-9D53-4C3F-9064-C4C1A115327C" width="2048" height="2114"/>
+        <image name="RealVision" width="1240" height="1280"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
